logs/finger_ocr_2026-01-14_06-45-37.log
06:45:37.623 [INFO] Initialization successful.
06:45:37.624 [INFO] Camera now open.
06:45:37.637 [INFO] Camera configuration has been adjusted!
06:45:37.642 [INFO] Configuration successful!
06:45:37.713 [INFO] Camera started
06:45:37.717 [INFO] OCR worker started
06:45:37.717 [INFO] Starting main loop
06:45:38.785 [INFO] Queued frame 0 for OCR
06:45:38.786 [INFO] OCR worker: received frame 0
06:45:38.939 [ERROR] OCR worker exception: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'
Traceback (most recent call last):
  File "/home/pi/ocrDeviceResearch/./src/test_live_43.py", line 198, in ocr_worker
    mse = ultra_fast_diff(prev_frame, preprocessed_img)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/pi/ocrDeviceResearch/./src/test_live_43.py", line 119, in ultra_fast_diff
    return cv2.norm(a, b, cv2.NORM_L2)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(4.12.0) /io/opencv/modules/core/src/norm.dispatch.cpp:538: error: (-215:Assertion failed) _src1.sameSize(_src2) in function 'norm'

